--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "url": "git://github.com/nmelhado/league-page.git"
   },
   "author": {
-    "name": "Nicholas Melhado",
-    "email": "n.melhado@gmail.com",
-    "url": "http://www.nmelhado.com/"
+    "name": "Nick S",
+    "email": "nmstuart20@gmail.com"
   },
   "contributors": [
     {
